plugins {
    id 'java'
    id "application"
}

version '1.0'
group 'fr.benco11'
archivesBaseName = 'Asynconf-2022'

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
compileJava.options.encoding = 'UTF-8'

mainClassName = 'fr.benco11.asynconf.Asynconf2022'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

jar {
    manifest {
        attributes "Main-Class": mainClassName
    }
}

run {
    standardInput = System.in
}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}